tests/parser-test-files/bad-files/parse-for.4.error
error: Malformed for expression
  --> test:4:24
   |
 4 |  (define f (for x in iter))
   |                          ^ expected body
