tests/parser-test-files/bad-files/parse-for.4.coal
;; BAD: Parse For
(package test-parser)

(define f (for x in iter))
